SrcFile/.metadata/.plugins/org.eclipse.cdt.ui/LAB2.build.log
10:17:37 **** Incremental Build of configuration Debug for project LAB2 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:113:23: error: 'Led_GPIO_Port' undeclared (first use in this function); did you mean 'd_GPIO_Port'?
  113 |    HAL_GPIO_TogglePin(Led_GPIO_Port, Led_Pin);
      |                       ^~~~~~~~~~~~~
      |                       d_GPIO_Port
../Core/Src/main.c:113:23: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:113:38: error: 'Led_Pin' undeclared (first use in this function); did you mean 'e_Pin'?
  113 |    HAL_GPIO_TogglePin(Led_GPIO_Port, Led_Pin);
      |                                      ^~~~~~~
      |                                      e_Pin
../Core/Src/main.c: In function 'MX_GPIO_Init':
../Core/Src/main.c:220:36: error: 'Led_Pin' undeclared (first use in this function); did you mean 'e_Pin'?
  220 |   HAL_GPIO_WritePin(GPIOA, DOT_Pin|Led_Pin|EN0_Pin|EN1_Pin
      |                                    ^~~~~~~
      |                                    e_Pin
../Core/Src/main.c:224:28: error: 'pot0_Pin' undeclared (first use in this function)
  224 |   HAL_GPIO_WritePin(GPIOB, pot0_Pin|pot1_Pin|pot2_Pin|pot3_Pin
      |                            ^~~~~~~~
../Core/Src/main.c:224:37: error: 'pot1_Pin' undeclared (first use in this function)
  224 |   HAL_GPIO_WritePin(GPIOB, pot0_Pin|pot1_Pin|pot2_Pin|pot3_Pin
      |                                     ^~~~~~~~
../Core/Src/main.c:224:46: error: 'pot2_Pin' undeclared (first use in this function)
  224 |   HAL_GPIO_WritePin(GPIOB, pot0_Pin|pot1_Pin|pot2_Pin|pot3_Pin
      |                                              ^~~~~~~~
../Core/Src/main.c:224:55: error: 'pot3_Pin' undeclared (first use in this function)
  224 |   HAL_GPIO_WritePin(GPIOB, pot0_Pin|pot1_Pin|pot2_Pin|pot3_Pin
      |                                                       ^~~~~~~~
../Core/Src/main.c:225:28: error: 'pot4_Pin' undeclared (first use in this function)
  225 |                           |pot4_Pin|pot5_Pin|pot6_Pin, GPIO_PIN_RESET);
      |                            ^~~~~~~~
../Core/Src/main.c:225:37: error: 'pot5_Pin' undeclared (first use in this function)
  225 |                           |pot4_Pin|pot5_Pin|pot6_Pin, GPIO_PIN_RESET);
      |                                     ^~~~~~~~
../Core/Src/main.c:225:46: error: 'pot6_Pin' undeclared (first use in this function)
  225 |                           |pot4_Pin|pot5_Pin|pot6_Pin, GPIO_PIN_RESET);
      |                                              ^~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

10:17:38 Build Failed. 11 errors, 0 warnings. (took 530ms)

